# embedded-intent-recognizer

./: CMakeLists.txt  README.md
include/: Intent.h  catch.h
src/: Intent.cpp
src/main/: mainapp.cpp
test/: test_intent.cpp
